spatial model. For the moment, only circular sky regions have been
implemented (#1764).

The GModelTemporalFunc class has been added to implement a temporal file
function for the simulation of transient sources. A unit test has been
added and the mc() and eval() methods have been validated using a dedicated
test script (#1914).

Improve the exception message for empty map cubes in GModelSpatialDiffuseCube::mc
(#1915).


9. Numerics module
------------------
The GNdarray class has been added that implements a n-dimensional double
precision floating point array (#1768).

The GFft class has been added that performs a Fast Fourier Transformation
of a n-dimensional array. The GFftWavetable class is a support class for
GFft that provides the trigonometric coefficients for a factorisation. For
the moment, GFft does only support 1-dimensional and 2-dimensional arrays
(#1731).


10. Observation module
----------------------
Time setting and getting methods for Julian Days, Modified Julian Days,
native seconds and native days are now available in the GTime class that
allow specifying the time system. Currently, TT, TAI and UTC are supported.
Methods have also been added to the GTime class that return the Greenwich
mean and apparent siderial times, and the local mean and apparent siderial
times that depend on the geographic longitude. Finally, a now() method has
been added to the GTime class that sets the time to the current time (see
#1856).

The GObservations::save_covmat() method computes and saves the covariance
matrix into a FITS file (#1863).

A leap second has been added to GTime::leap_seconds() for 1 January 2017
(#1887).


11. Optimization module
-----------------------
None


12. Sky module
--------------
The GSkyMap::write() method now returns a pointer to the written GFitsHDU
object. In case that no sky map is written, for example because none has been
defined so far, the method returns NONE. The GSkyMap::publish() method will